--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "grunt": "*",
     "grunt-contrib-sass": "*",
     "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*"
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-jshint": "~0.7.1"
   },
   "devDependencies": {
     "grunt-contrib-jshint": "~0.7.1"
