--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-jshint": "~0.7.1",
-    "grunt-notify": "~0.2.16"
+    "grunt-notify": "~0.2.16",
+    "grunt-autoprefixer": "^0.8.1"
   }
 }
