--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.2",
   "dependencies": {
     "grunt": "*",
-    "grunt-contrib-sass": "*",
+    "grunt-sass": "*",
     "grunt-contrib-uglify": "*",
     "grunt-contrib-watch": "*",
     "grunt-contrib-jshint": "~0.7.1",
